--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/guduf/capss/issues"
   },
-  "homepage": "https://github.com/guduf/capss#readme"
+  "homepage": "https://github.com/guduf/capss#readme",
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "stylus": "^0.54.2"
+  }
 }
