--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capss",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.1",
   "description": "stylus functions as properties to accelerate coding",
   "main": "index.styl",
   "scripts": {
@@ -22,7 +22,13 @@
   },
   "homepage": "https://github.com/guduf/capss#readme",
   "dependencies": {
+    "async": "^1.5.2",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
+    "glob": "^7.0.4",
     "stylus": "^0.54.2"
+  },
+  "devDependencies": {
+    "stylus": "^0.54.5"
   }
 }
